--- a/.github/workflows/wsl.yml
+++ b/.github/workflows/wsl.yml
@@ -3,6 +3,8 @@ on:
   push:
     branches:
       - main
+permissions:
+  actions: write
 jobs:
   build-wsl-artifact:
     runs-on: ubuntu-latest
@@ -11,7 +13,25 @@ jobs:
       cancel-in-progress: true
     steps:
       - uses: actions/checkout@v4
-      - uses: cachix/install-nix-action@v30
+      - uses: nixbuild/nix-quick-install-action@v29
+      - name: Restore and cache Nix store
+        uses: nix-community/cache-nix-action@v5
+        with:
+          # restore and save a cache using this key
+          primary-key: nix-${{ runner.os }}-${{ hashFiles('**/*.nix') }}
+          # if there's no cache hit, restore a cache by this prefix
+          restore-prefixes-first-match: nix-${{ runner.os }}-
+          # collect garbage until Nix store size (in bytes) is at most this number
+          # before trying to save a new cache
+          gc-max-store-size-linux: 1073741824
+          # do purge caches
+          purge: true
+          # purge all versions of the cache
+          purge-prefixes: cache-${{ runner.os }}-
+          # created more than this number of seconds ago relative to the start of the `Post Restore` phase
+          purge-created: 0
+          # except the version with the `primary-key`, if it exists
+          purge-primary-key: never
       - run: nix flake check
       - run: make wsl
       - name: Upload Artifact
