--- a/.github/workflows/wsl.yml
+++ b/.github/workflows/wsl.yml
@@ -39,3 +39,21 @@ jobs:
         with:
           name: wsl.tar.gz
           path: result/tarball
+  test-wsl-artifact:
+    runs-on: windows-latest
+    needs: build-wsl-artifact
+    steps:
+      - name: Download Artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: wsl-tarball
+          path: wsl-tarball
+      - name: Extract ZIP File
+        run: |
+          Expand-Archive -Path wsl-tarball/tarball -DestinationPath wsl-tarball
+      - name: Import nixos to WSL
+        run: |
+          wsl --import nixos C:/WSL wsl-tarball/nixos-wsl-installer.tar.gz --version 2
+      - name: Test nixos WSL
+        run: |
+          wsl -d nixos -- cat /etc/os-release
