--- a/.github/workflows/wsl.yml
+++ b/.github/workflows/wsl.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: wsl.tar.gz
+          name: wsl-tarball
           path: result/tarball
   test-wsl-artifact:
     runs-on: windows-latest
