--- a/.github/workflows/wsl.yml
+++ b/.github/workflows/wsl.yml
@@ -43,6 +43,9 @@ jobs:
     runs-on: windows-latest
     needs: build-wsl-artifact
     steps:
+      - uses: vedantmgoyal9/setup-wsl2@v1
+        with:
+          distro: none
       - name: Download Artifact
         uses: actions/download-artifact@v4
         with:
@@ -52,7 +55,6 @@ jobs:
         run: ls -R
       - name: Import nixos to WSL
         run: |
-          wsl --set-default-version 2; wsl --update; wsl --status;
           wsl --import nixos C:/WSL wsl-tarball/nixos-wsl.tar.gz --version 2
       - name: Test nixos WSL
         run: |
