--- a/.github/workflows/wsl.yml
+++ b/.github/workflows/wsl.yml
@@ -49,7 +49,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: wsl-tarball
-          path: nixos-wsl.tar.gz
+          path: nixos.wsl
   test-wsl-artifact:
     runs-on: windows-latest
     needs: build-wsl-artifact
@@ -66,7 +66,7 @@ jobs:
         run: ls -R
       - name: Import nixos to WSL
         run: |
-          wsl --import nixos C:/WSL wsl-tarball/nixos-wsl.tar.gz --version 2
+          wsl --import nixos C:/WSL wsl-tarball/nixos.wsl --version 2
       - name: Test nixos WSL
         run: |
           wsl -d nixos -- cat /etc/os-release
