nix flake update, update ghostty config theme name

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -1,6 +1,8 @@
 # Learn how to configure Hyprland: https://wiki.hyprland.org/Configuring/
 
 # Use defaults Omarchy defaults (but don't edit these directly!)
+# TODO: remove when updating omarchy configs
+# hyprlang noerror true
 source = ~/.local/share/omarchy/default/hypr/autostart.conf
 source = ~/.local/share/omarchy/default/hypr/bindings/media.conf
 source = ~/.local/share/omarchy/default/hypr/bindings/tiling.conf
@@ -10,6 +12,7 @@ source = ~/.local/share/omarchy/default/hypr/looknfeel.conf
 source = ~/.local/share/omarchy/default/hypr/input.conf
 source = ~/.local/share/omarchy/default/hypr/windows.conf
 source = ~/.config/omarchy/current/theme/hyprland.conf
+# hyprlang noerror false
 
 # Change your own setup in these files (and overwrite any settings from defaults!)
 source = ~/.config/hypr/monitors.conf
