ghostty add alt+w close tab on linux

--- a/config/ghostty/config
+++ b/config/ghostty/config
@@ -9,3 +9,4 @@ keybind= alt+up=ignore
 keybind= alt+down=ignore
 keybind= ctrl+enter=text:\r
 keybind= super+down=scroll_page_down
+config-file = ?linux-keybinds
